- add referrer mechanism to login page
- make realm for basic authentification configurable
- fix --write-out-files
aMule:
- select right protocol version for aMule 2.2.5
Transmission:
- support X-Transmission-Session-Id
   (fix errors from JsonParser)
- better support for sub files
Plex gui:
- add l33t text transform for downloads
Clutch gui:
- update to Transmission 1.74
- better support for sub files
Jay gui:
- fix some broken stuff

*Web-GMUI-0.1.3 (25.05.2009)
Moritz Warning <mwarning@users.sourceforge.net>
- fix shutdown with ctrl-c on Windows
- JSON RPC rewrite, now with json input and output
aMule:
- support for aMule trunk EC protocol (2.2.4 and 2.2.5)
- better authorization handling
- allow multiple searches
- search removal was broken
MLDonkey:
- fix wrong speed diplay (often displayed 28KB/s)
- omit tags "completesources" and "availability" from search result format data
Clutch gui:
- update to Transmission >1.61 (r8420)
Jay gui:
- Note: currently broken!
- switch to jQuery and new JSON RPC

*Web-GMUI-0.1.2 (24.04.2009)
Moritz Warning <mwarning@users.sourceforge.net>
- save settings on ctrl+c on windows
- add source module to error messages
- make some sockets non-blocking as they should have been from the beginning
Clutch gui:
- update to Transmission 1.52
aMule:
- fix "Invalid id" bug

*Web-GMUI-0.1.1 (11.04.2009)
Moritz Warning <mwarning@users.sourceforge.net>
- make the source compile with the llvm D compiler (www.dsource.org/projects/ldc)
- add daemon support, -d command line option
- update to Tango 0.99.8
- renamed "Temp Directory" to "Preview Directory" (it is sneaked into the clients settings)
- faster web server
- fix crash on startup due to un-synchronized console output
- added Logger
- bugfixes
Plex gui:
- add Italian translation by Niko "Tokka" Pistelli
- fix enum names for export in translator module
- remove no-setting-files command line option, no real use
- restore/save gui settings
- some translation ambiguity fixes
Transmission: