@@ -76,7 +76,7 @@ enum Phrase
     allow_file_upload,
     show_directories,
     show_hidden_files,
-    num_lines,
+    Number_of_Lines,
     Load_Modules,
     Unload_Modules,
     default_interface,
@@ -391,7 +391,7 @@ struct Dictionary
         Phrase.allow_file_upload : "Allow File Upload",
         Phrase.show_directories : "Show Directories",
         Phrase.show_hidden_files : "Show Hidden Files",
-        Phrase.num_lines : "Bar Rows",
+        Phrase.Number_of_Lines : "Number of Rows",
         Phrase.Load_Modules : "Load Modules",
         Phrase.Unload_Modules : "Unload Modules",
         Phrase.default_interface : "Default Interface",
@@ -633,7 +633,7 @@ struct Dictionary
         Phrase.allow_file_upload : "Datei Upload erlauben",
         Phrase.show_directories : "Zeige Verzeichnisse",
         Phrase.show_hidden_files : "Versteckte Dateien anzeigen",
-        Phrase.num_lines : "Zeilenanzahl",
+        Phrase.Number_of_Lines : "Zeilenanzahl",
         Phrase.Load_Modules : "Module Laden",
         Phrase.Unload_Modules : "Module Entladen",
         Phrase.default_interface : "Default Oberfläche",
@@ -1333,7 +1333,7 @@ struct Dictionary
         Phrase.allow_file_upload : "Autoriser Transfert de Données",
         Phrase.show_directories : "Montrer les Répertoires",
         Phrase.show_hidden_files : "Montrer les Données Cachées",
-        Phrase.num_lines : "Quantité de Lignes",
+        Phrase.Number_of_Lines : "Quantité de Lignes",
         Phrase.Load_Modules : "Charger les Modules",
         Phrase.Unload_Modules : "Décharger les Modules",
         Phrase.default_interface : "Interface par Défaut",
@@ -1495,7 +1495,7 @@ struct Dictionary
         Phrase.allow_file_upload : "Permetti Upload File",
         Phrase.show_directories : "Mostra Percorsi",
         Phrase.show_hidden_files : "Mostra Files Nascosti",
-        Phrase.num_lines : "Barra delle file",
+        Phrase.Number_of_Lines : "Barra delle file",
         Phrase.Load_Modules : "Carica Moduli",
         Phrase.Unload_Modules : "Scarica (unload) Moduli",
         Phrase.default_interface : "Interfaccia di Default",
@@ -1702,7 +1702,7 @@ struct Dictionary
         Phrase.allow_file_upload : "allow_file_upload",
         Phrase.show_directories : "show_directories",
         Phrase.show_hidden_files : "show_hidden_files",
-        Phrase.num_lines : "num_lines",
+        Phrase.Number_of_Lines : "Number_of_Lines",
         Phrase.Load_Modules : "Load_Modules",
         Phrase.Unload_Modules : "Unload_Modules",
         Phrase.default_interface : "default_interface",
